# PopMedia

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.local.json
.claude/commands/: commit-with-review.md  commit.md  review.md  testall.md
docs/: ai-content-generation-design.md
e2e/: ai-chat.spec.ts  canvas.spec.ts
public/: splashscreen.html
scripts/: clean-db.js  copy-skills.js
src/: App.tsx  constants.ts  icons.tsx  index.css  nodeTypes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_canvas_preview.sql  003_llm_provider_type.sql  004_project_details.sql  006_comfyui_workflows.sql
src-tauri/skills/: script-converter.md  summarize.md  translate.md
src-tauri/src/: commands_tests.rs  db.rs  db_tests.rs  lib.rs  models.rs  tests.rs
src-tauri/src/commands/: canvas.rs  chat.rs  connections.rs  http.rs  mod.rs  projects.rs  settings.rs  skills.rs
src/components/: AddNodeMenu.tsx  AudioNode.tsx  BlockNode.tsx  CanvasModals.tsx  ChatDrawer.tsx  ControlBar.tsx  CustomSelect.tsx  ErrorBoundary.tsx  GroupNode.tsx  HeaderBar.tsx  ImageNode.tsx  ModelSelect.tsx  NodeAIDialog.tsx  NodeAIInput.tsx  NodeHeader.tsx  Notification.tsx  ResizeHandle.tsx  Sidebar.tsx  TestLogModal.tsx  TextNode.tsx  VideoNode.tsx
src/contexts/: CanvasContext.tsx  ChatContext.tsx  NotificationContext.tsx
src/hooks/: useCanvas.ts  useClickOutside.ts  useMediaUrl.ts  useNodeAI.ts  useNodeUpdates.ts  (+2 more)
(+31 files in other folders)
